# allo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD_RELEASE.zh-CN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  README.zh-CN.md  RELEASING.md  RELEASING.zh-CN.md  SECURITY.md  STATUS.md  docker-compose.yml  package.json
.cargo/: config.local.toml.example  (+1 more)
crates/agent/flowy-web/: Cargo.toml
crates/agent/flowy-web/src/: lib.rs  types.rs
crates/agent/flowy-web/src/provider/: article.rs  duckduckgo.rs  extract.rs  html_md.rs  http_extract.rs  mod.rs  search.rs  ssrf.rs
crates/agent/flowy-web/src/tools/: mod.rs  web_extract.rs  web_search.rs
crates/agent/flowy-web/tests/fixtures/: article_with_chrome.html  ddg_sample.html  page_sample.html
crates/agent/nomi-auxiliary/: Cargo.toml
crates/agent/nomi-auxiliary/src/: client.rs  error.rs  lib.rs  task.rs
crates/agent/nomi-config/: Cargo.toml
crates/agent/nomi-config/examples/: shell_diag.rs
crates/agent/nomi-config/src/: auth.rs  compact.rs  compat.rs  config.rs  dep_check.rs  dep_gate.rs  gateway.rs  insights.rs  interest.rs  lib.rs  media.rs  server.rs
crates/agent/nomi-config/src/runtime_dep_install/: coordinator.rs  ffmpeg.rs  mod.rs  probe.rs
crates/agent/nomi-config/tests/: compact_config_test.rs
crates/agent/nomi-insights-core/: Cargo.toml
crates/agent/nomi-insights-core/src/: client.rs  interest.rs  lib.rs  maturity.rs  paths.rs  redact.rs  sanitize.rs  service.rs  session_skills.rs  skill.rs  types.rs
crates/agent/nomi-insights-core/src/auxiliary/: client.rs  error.rs  mod.rs  task.rs
crates/agent/nomi-insights-core/src/work_session/: domain.rs  metrics.rs  pipeline.rs  resolution.rs  resolution_llm.rs
crates/agent/nomi-media/: Cargo.toml
crates/agent/nomi-media/src/: assets.rs  credits.rs  lib.rs  llm_refine.rs  long_video_active.rs  long_video_plan.rs  preview.rs  progress.rs  prompt_guidance.rs  qa.rs  register.rs  tool_schemas.rs  video_segment.rs
crates/agent/nomi-poi/: Cargo.toml
crates/agent/nomi-poi/src/: contextual.rs  declared.rs  extract.rs  ingest.rs  lib.rs  llm.rs  memory_plugin.rs  persist_policy.rs  pipeline.rs  plugin.rs  quality.rs  session_buffer.rs  starters.rs  store.rs  task_oriented.rs  types.rs
crates/agent/nomi-vimax/: Cargo.toml
crates/agent/nomi-vimax/prompts/: best_image_selector__human_prompt_template_select_most_consistent_image.txt  best_image_selector__system_prompt_template_select_most_consistent_image.txt  camera_image_generator__human_prompt_template_select_reference_camera.txt  camera_image_generator__system_prompt_template_select_reference_camera.txt  character_extractor__human_prompt_template_extract_characters.txt  character_extractor__system_prompt_template_extract_characters.txt  character_portraits_generator__prompt_template_back.txt  character_portraits_generator__prompt_template_front.txt  character_portraits_generator__prompt_template_side.txt  character_portraits_generator__prompt_template_three_view.txt  event_extractor__human_prompt_template_extract_next_event.txt  event_extractor__system_prompt_template_extract_events.txt  global_information_planner__human_prompt_template_merge_characters_across_scenes_in_event.txt  global_information_planner__human_prompt_template_merge_characters_to_existing_characters_in_novel.txt  global_information_planner__system_prompt_template_merge_characters_across_scenes_in_event.txt  global_information_planner__system_prompt_template_merge_characters_to_existing_characters_in_novel.txt  novel_compressor__human_prompt_template_aggregate.txt  novel_compressor__human_prompt_template_compress_novel_chunk.txt  novel_compressor__system_prompt_template_aggregate.txt  novel_compressor__system_prompt_template_compress_novel_chunk.txt  reference_image_selector__human_prompt_template_select_reference_images.txt  reference_image_selector__system_prompt_template_select_reference_images_multimodal.txt  reference_image_selector__system_prompt_template_select_reference_images_only_text.txt  scene_extractor__human_prompt_template_get_next_scene.txt  scene_extractor__system_prompt_template_get_next_scene.txt  screenwriter__human_prompt_template_develop_story.txt  screenwriter__human_prompt_template_write_script_based_on_story.txt  screenwriter__system_prompt_template_develop_story.txt  screenwriter__system_prompt_template_write_script_based_on_story.txt  script_enhancer__human_prompt_template_script_enhancer.txt  script_enhancer__system_prompt_template_script_enhancer.txt  script_planner__human_prompt_template_script_planner.txt  script_planner__montage_script_prompt_template.txt  script_planner__motion_script_prompt_template.txt  script_planner__narrative_script_prompt_template.txt  storyboard_artist__human_prompt_template_decompose_visual_description.txt  storyboard_artist__human_prompt_template_design_storyboard.txt  storyboard_artist__system_prompt_template_decompose_visual_description.txt  storyboard_artist__system_prompt_template_design_storyboard.txt  world_assets__human_prompt_template_extract.txt  (+3 more)
crates/agent/nomi-vimax/src/: error.rs  json_util.rs  lib.rs  planning.rs  progress.rs  prompt_safety.rs  rag.rs  revise.rs  service.rs
crates/backend/nomifun-cloud/: Cargo.toml
crates/backend/nomifun-cloud/src/: config_defaults.rs  doctor.rs  error.rs  http_routes.rs  http_service.rs  insights_config.rs  lib.rs  paths.rs  profile.rs  provider_sync.rs  session.rs  telemetry.rs  transport.rs
crates/backend/nomifun-insights/: Cargo.toml
crates/backend/nomifun-insights/src/: lib.rs  local_analytics.rs  routes.rs  service.rs  state.rs
crates/backend/nomifun-poi/: Cargo.toml
crates/backend/nomifun-poi/src/: lib.rs  preset_starters.rs  routes.rs  service.rs  state.rs
crates/backend/nomifun-vimax/: Cargo.toml
crates/backend/nomifun-vimax/src/: lib.rs  routes.rs  service.rs  state.rs
crates/shared/nomifun-models-dev/: Cargo.toml
crates/shared/nomifun-models-dev/src/: cache.rs  client.rs  lib.rs  mapping.rs  noise.rs  parse.rs  resolve.rs  types.rs
(+1866 files in other folders)
