[package]
name = "nomi-config"
description = "Configuration layer for Nomi: Config struct, ProviderCompat, auth, hooks, session config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nomifun-common.workspace = true
nomi-types.workspace   = true
nomi-compact.workspace = true

serde.workspace      = true
serde_json.workspace = true
serde_yaml.workspace = true
toml                 = "1" # pinned: agent code uses toml 1.0 (workspace default is 0.8 for be-rs)
toml_edit            = "0.25"
anyhow.workspace     = true
thiserror.workspace  = true
dirs.workspace       = true
chrono.workspace     = true
reqwest = { workspace = true, features = ["stream"] }
futures.workspace    = true
glob.workspace       = true
tokio.workspace      = true
which.workspace      = true
zip.workspace        = true
tar.workspace        = true
xz2.workspace        = true
tempfile.workspace   = true

tracing.workspace            = true
tracing-appender.workspace   = true
tracing-subscriber.workspace = true


[dev-dependencies]
wiremock.workspace            = true
tokio-test.workspace          = true
tracing-subscriber.workspace  = true
