[package]
name = "nomifun-poi"
version.workspace = true
edition.workspace = true

[dependencies]
nomifun-common.workspace = true
nomifun-api-types.workspace = true
nomifun-auth.workspace = true
nomi-config.workspace = true
nomi-poi.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
