[package]
name = "nomifun-vimax"
description = "HTTP surface for ViMax video generation (/api/vimax/*)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nomi-vimax.workspace = true
nomi-config.workspace = true
nomifun-common.workspace = true
nomifun-api-types.workspace = true
nomifun-auth.workspace = true
nomifun-cloud.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
mime_guess.workspace = true
